--- a/_posts/2016-08-24-template.md
+++ b/_posts/2016-08-24-template.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      template
+title:      A Post Title
 date:       2016-08-24 19:00:00
-summary:    Sumary.
+summary:    This is where the summary would go.
 ---
 
 Text text text.
